# debugged

./: README.md  debugged.cabal
src/Data/: Debug.hs
src/Data/Debug/: Class.hs  Diff.hs  Generics.hs  IO.hs  Pretty.hs  PrettyPrinter.hs  Type.hs
test/: Main.hs
